@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Net-Amazon
-version:      0.28
+version:      0.28_03
 version_from: lib/Net/Amazon.pm
 installdirs:  site
 requires:
