@@ -3,25 +3,73 @@ package Net::Amazon::Request::ASIN;
 ######################################################################
 use base qw(Net::Amazon::Request);
 
+# These values are defined in the AWS SDK
+# (http://amazon.com/webservices) under
+# "Product and Catalog Data" / "ASIN and ISBN Searches"
+use constant MAX_ASINS_PER_TYPE => {
+    heavy => 10,
+    lite  => 30,
+};
+
 ##################################################
 sub new {
 ##################################################
     my($class, %options) = @_;
 
-    if(exists $options{asin}) {
-        if(ref $options{asin} eq "ARRAY") {
-            $options{AsinSearch} = join ',', @{$options{asin}};
-        } else {
-            $options{AsinSearch} = $options{asin};
-        }
-        delete $options{asin};
-    } else {
-        die "Mandatory parameter 'asin' not defined";
-    }
+    $class->_process_asin_option(\%options);
 
     my $self = $class->SUPER::new(%options);
 
     bless $self, $class;   # reconsecrate
+}
+
+##
+## PRIVATE METHODS
+##
+
+# $class->_process_asin_option( OPTIONS )
+#
+# Takes a reference to a hash of OPTIONS ('asin' is the
+# only mandatory key) and turns the 'asin' key into
+# 'AsinSearch'. If the value associated with 'asin' is an array,
+# we check to make sure that we're not asking for too many asins
+# at once.
+#
+# Returns void if all goes well. If any problems are encountered,
+# die() will be called.
+#
+sub _process_asin_option {
+    my ($class, $options) = @_;
+
+    # Only testing for existence of the 'asin' key will not catch
+    # cases where someone provides an empty asin list, so we test
+    # for truth instead, which is slightly better.
+    die "Mandatory parameter 'asin' not provided."
+        unless ( $options->{'asin'} );
+
+    # If the asins are supplied in the form of an array, we have to
+    # make sure that the caller isn't trying to ask for too many at a
+    # time. If we don't make this test, those excessive asins will be
+    # silently ignored by the AWS servers...resulting in potentially
+    # confusing results for the user.
+    if ( ref $options->{'asin'} eq 'ARRAY' ) {
+        my $type      = $options{'type'} || $class->SUPER::DEFAULT_TYPE;
+        my $max_asins = MAX_ASINS_PER_TYPE->{$type};
+
+        # Dying is the right thing to do here because this is
+        # indicative of a programming error.
+        die "Only $max_asins may be requested at a time using type '$type'"
+            if ( @{$options->{'asin'}} > $max_asins );
+
+        $options{'asin'} = join ',', @{$options->{'asin'}};
+    } elsif ( ref $options->{'asin'} ) {
+        die "The 'asin' parameter must either be a scalar or an array";
+    }
+
+    $options{'AsinSearch'} = $options{'asin'};
+    delete $options{'asin'};
+
+    return;
 }
 
 1;
