@@ -1,8 +1,11 @@
 Revision history for Perl extension Net::Amazon:
 
 0.28 (not yet released)
+   TODO: Check if fixes work with 5.005
+
    (ms) ASIN search can now process several asin numbers with one request.
-        Thanks to Dan Kreft <dan@kreft.net> for suggesting this!
+        Dan Kreft <dan@kreft.net> cleaned up the Request.pm and
+        ASIN.pm implementation.
    (ms) Tatsuhiko Miyagawa <miyagawa@livedoor.jp> provided a patch for
         load errors on search(blended => ...), a fix for a bug with
         single/multiple ProductLine(s), and a suggestion for using
